--- a/app/src/main/res/layout/activity_registeruser.xml
+++ b/app/src/main/res/layout/activity_registeruser.xml
@@ -141,19 +141,20 @@
                 app:layout_constraintBottom_toTopOf="@+id/nonvegCheckbox"
                 app:layout_constraintStart_toStartOf="@+id/nonvegCheckbox" />
 
-                <Button
-                    android:id="@+id/registerButton"
-                    android:layout_width="368dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="45dp"
-                    android:layout_marginTop="16dp"
-                    android:text="Register"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view" />
+            <Button
+                android:id="@+id/registerButton"
+                android:layout_width="368dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="45dp"
+                android:layout_marginTop="16dp"
+                android:text="Register"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:onClick="onButtonClick"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view" />
 
 </android.support.constraint.ConstraintLayout>
