--- a/app/src/main/res/layout/activity_registeruser.xml
+++ b/app/src/main/res/layout/activity_registeruser.xml
@@ -20,10 +20,12 @@
             android:id="@+id/toolbar_title"
             android:layout_width="150dp"
             android:layout_height="35dp"
-            android:layout_marginHorizontal="100dp"
-            android:text="Register User"
+            android:layout_marginHorizontal="80dp"
+            android:text="Register"
             android:textColor="#FFFFFF"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            tools:layout_editor_absoluteX="80dp"
+            tools:layout_editor_absoluteY="11dp" />
     </android.support.v7.widget.Toolbar>
 
     <ProgressBar
